Fix scrollbar margin and menu alignment

--- a/Discreet-Flat/files/Discreet-Flat/cinnamon/cinnamon.css
+++ b/Discreet-Flat/files/Discreet-Flat/cinnamon/cinnamon.css
@@ -357,7 +357,7 @@ StScrollBar StButton#hhandle:hover {
 }
 #notification StEntry:focus {
   border: 1px solid #8b8b8b;
-  color: $333;
+  color: #333;
   background-gradient-direction: vertical;
   background-gradient-start: #c8c8c8;
   background-gradient-end: #fff;
@@ -686,6 +686,10 @@ StScrollBar StButton#hhandle:hover {
   color: #fff;
   font-size: 9.5pt;
   min-width: 100px;
+  margin: 0.2ex;
+}
+.menu StScrollBar {
+  margin: 1em 0;
 }
 .popup-menu-arrow {
   icon-size: 1.14em;
