--- a/Discreet-Flat/src/applets/menu.styl
+++ b/Discreet-Flat/src/applets/menu.styl
@@ -24,6 +24,10 @@
 	color: #ffffff
 	font-size: 9.5pt
 	min-width: 100px
+	margin: 0.2ex
+
+	StScrollBar
+		margin: 1em 0
 
 .popup-menu-arrow
 	icon-size: 1.14em
