--- a/Discreet-Flat/src/notifications.styl
+++ b/Discreet-Flat/src/notifications.styl
@@ -74,7 +74,7 @@
 
 	&:focus
 		border: 1px solid #8b8b8b
-		color: $333
+		color: #333
 		background-gradient-direction: vertical
 		background-gradient-start: rgb(200,200,200)
 		background-gradient-end: white
